de.kit.tva.lost/src/de/kit/tva/lost/models/LostParser.java
package de.kit.tva.lost.models;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
// Generated from LOST.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import de.kit.tva.lost.interfaces.LOSTListener;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class LostParser extends Parser {
    static {
	RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__27 = 1, T__26 = 2, T__25 = 3, T__24 = 4, T__23 = 5, T__22 = 6, T__21 = 7, T__20 = 8,
	    T__19 = 9, T__18 = 10, T__17 = 11, T__16 = 12, T__15 = 13, T__14 = 14, T__13 = 15, T__12 = 16, T__11 = 17,
	    T__10 = 18, T__9 = 19, T__8 = 20, T__7 = 21, T__6 = 22, T__5 = 23, T__4 = 24, T__3 = 25, T__2 = 26,
	    T__1 = 27, T__0 = 28, WS = 29, NL = 30, OP = 31, ID = 32;
    public static final String[] tokenNames = { "<INVALID>", "'post:'", "'intm:'", "'var:'", "'{'", "';'", "'Renaming'",
	    "'}'", "'D('", "'()'", "'R:'", "'guard:'", "'C('", "'B('", "'O:'", "'('", "'pre:'", "','", "'Vars'", "'M:'",
	    "'inv:'", "'\t'", "'S('", "'L('", "'skip'", "'name:'", "'F'", "'GlobalConditions'", "')'", "WS", "'\n'",
	    "OP", "ID" };
    public static final int RULE_program = 0, RULE_root = 1, RULE_diagram = 2, RULE_initializer = 3, RULE_vars = 4,
	    RULE_variable = 5, RULE_globalConditions = 6, RULE_renaming = 7, RULE_renamer = 8, RULE_formula = 9,
	    RULE_pre = 10, RULE_post = 11, RULE_intm = 12, RULE_condition = 13, RULE_quantor = 14, RULE_refinement = 15,
	    RULE_refinementRule = 16, RULE_statement = 17, RULE_javaReturn = 18, RULE_assigner = 19,
	    RULE_composition = 20, RULE_selection = 21, RULE_guards = 22, RULE_repetition = 23, RULE_inv = 24,
	    RULE_guard = 25, RULE_var = 26, RULE_returnS = 27, RULE_originalS = 28, RULE_skipS = 29,
	    RULE_methodCallS = 30, RULE_block = 31, RULE_name = 32, RULE_mlexpr = 33;
    public static final String[] ruleNames = { "program", "root", "diagram", "initializer", "vars", "variable",
	    "globalConditions", "renaming", "renamer", "formula", "pre", "post", "intm", "condition", "quantor",
	    "refinement", "refinementRule", "statement", "javaReturn", "assigner", "composition", "selection", "guards",
	    "repetition", "inv", "guard", "var", "returnS", "originalS", "skipS", "methodCallS", "block", "name",
	    "mlexpr" };

    @Override
    public String getGrammarFileName() {
	return "LOST.g4";
    }

    @Override
    public String[] getTokenNames() {
	return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
	return ruleNames;
    }

    @Override
    public String getSerializedATN() {
	return _serializedATN;
    }

    @Override
    public ATN getATN() {
	return _ATN;
    }

    public LostParser(TokenStream input) {
	super(input);
	_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
	public TerminalNode EOF() {
	    return getToken(LostParser.EOF, 0);
	}

	public RootContext root() {
	    return getRuleContext(RootContext.class, 0);
	}

	public ProgramContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_program;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterProgram(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitProgram(this);
	}
    }

    public final ProgramContext program() throws RecognitionException {
	ProgramContext _localctx = new ProgramContext(_ctx, getState());
	enterRule(_localctx, 0, RULE_program);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(68);
		root();
		setState(69);
		match(EOF);
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class RootContext extends ParserRuleContext {
	public DiagramContext diagram() {
	    return getRuleContext(DiagramContext.class, 0);
	}

	public RootContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_root;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterRoot(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitRoot(this);
	}
    }

    public final RootContext root() throws RecognitionException {
	RootContext _localctx = new RootContext(_ctx, getState());
	enterRule(_localctx, 2, RULE_root);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(71);
		diagram();
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class DiagramContext extends ParserRuleContext {
	public TerminalNode NL() {
	    return getToken(LostParser.NL, 0);
	}

	public NameContext name() {
	    return getRuleContext(NameContext.class, 0);
	}

	public List<InitializerContext> initializer() {
	    return getRuleContexts(InitializerContext.class);
	}

	public InitializerContext initializer(int i) {
	    return getRuleContext(InitializerContext.class, i);
	}

	public DiagramContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_diagram;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterDiagram(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitDiagram(this);
	}
    }

    public final DiagramContext diagram() throws RecognitionException {
	DiagramContext _localctx = new DiagramContext(_ctx, getState());
	enterRule(_localctx, 4, RULE_diagram);
	int _la;
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(73);
		match(T__20);
		setState(74);
		name();
		setState(75);
		match(T__0);
		setState(76);
		match(NL);
		setState(77);
		match(T__7);
		setState(79);
		_errHandler.sync(this);
		_la = _input.LA(1);
		do {
		    {
			{
			    setState(78);
			    initializer();
			}
		    }
		    setState(81);
		    _errHandler.sync(this);
		    _la = _input.LA(1);
		} while ((((_la) & ~0x3f) == 0 && ((1L << _la)
			& ((1L << T__22) | (1L << T__10) | (1L << T__2) | (1L << T__1) | (1L << NL))) != 0));
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class InitializerContext extends ParserRuleContext {
	public List<TerminalNode> NL() {
	    return getTokens(LostParser.NL);
	}

	public FormulaContext formula() {
	    return getRuleContext(FormulaContext.class, 0);
	}

	public GlobalConditionsContext globalConditions() {
	    return getRuleContext(GlobalConditionsContext.class, 0);
	}

	public TerminalNode NL(int i) {
	    return getToken(LostParser.NL, i);
	}

	public RenamingContext renaming() {
	    return getRuleContext(RenamingContext.class, 0);
	}

	public VarsContext vars() {
	    return getRuleContext(VarsContext.class, 0);
	}

	public InitializerContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_initializer;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterInitializer(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitInitializer(this);
	}
    }

    public final InitializerContext initializer() throws RecognitionException {
	InitializerContext _localctx = new InitializerContext(_ctx, getState());
	enterRule(_localctx, 6, RULE_initializer);
	int _la;
	try {
	    int _alt;
	    setState(135);
	    switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
	    case 1:
		enterOuterAlt(_localctx, 1); {
		setState(86);
		_errHandler.sync(this);
		_la = _input.LA(1);
		while (_la == NL) {
		    {
			{
			    setState(83);
			    match(NL);
			}
		    }
		    setState(88);
		    _errHandler.sync(this);
		    _la = _input.LA(1);
		}
		setState(89);
		formula();
		setState(93);
		_errHandler.sync(this);
		_alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
		while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
		    if (_alt == 1) {
			{
			    {
				setState(90);
				match(NL);
			    }
			}
		    }
		    setState(95);
		    _errHandler.sync(this);
		    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
		}
	    }
		break;
	    case 2:
		enterOuterAlt(_localctx, 2); {
		setState(99);
		_errHandler.sync(this);
		_la = _input.LA(1);
		while (_la == NL) {
		    {
			{
			    setState(96);
			    match(NL);
			}
		    }
		    setState(101);
		    _errHandler.sync(this);
		    _la = _input.LA(1);
		}
		setState(102);
		vars();
		setState(106);
		_errHandler.sync(this);
		_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
		while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
		    if (_alt == 1) {
			{
			    {
				setState(103);
				match(NL);
			    }
			}
		    }
		    setState(108);
		    _errHandler.sync(this);
		    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
		}
	    }
		break;
	    case 3:
		enterOuterAlt(_localctx, 3); {
		setState(112);
		_errHandler.sync(this);
		_la = _input.LA(1);
		while (_la == NL) {
		    {
			{
			    setState(109);
			    match(NL);
			}
		    }
		    setState(114);
		    _errHandler.sync(this);
		    _la = _input.LA(1);
		}
		setState(115);
		globalConditions();
		setState(119);
		_errHandler.sync(this);
		_alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
		while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
		    if (_alt == 1) {
			{
			    {
				setState(116);
				match(NL);
			    }
			}
		    }
		    setState(121);
		    _errHandler.sync(this);
		    _alt = getInterpreter().adaptivePredict(_input, 6, _ctx);
		}
	    }
		break;
	    case 4:
		enterOuterAlt(_localctx, 4); {
		setState(125);
		_errHandler.sync(this);
		_la = _input.LA(1);
		while (_la == NL) {
		    {
			{
			    setState(122);
			    match(NL);
			}
		    }
		    setState(127);
		    _errHandler.sync(this);
		    _la = _input.LA(1);
		}
		setState(128);
		renaming();
		setState(132);
		_errHandler.sync(this);
		_alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
		while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
		    if (_alt == 1) {
			{
			    {
				setState(129);
				match(NL);
			    }
			}
		    }
		    setState(134);
		    _errHandler.sync(this);
		    _alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
		}
	    }
		break;
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class VarsContext extends ParserRuleContext {
	public TerminalNode NL() {
	    return getToken(LostParser.NL, 0);
	}

	public VariableContext variable(int i) {
	    return getRuleContext(VariableContext.class, i);
	}

	public List<VariableContext> variable() {
	    return getRuleContexts(VariableContext.class);
	}

	public VarsContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_vars;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterVars(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitVars(this);
	}
    }

    public final VarsContext vars() throws RecognitionException {
	VarsContext _localctx = new VarsContext(_ctx, getState());
	enterRule(_localctx, 8, RULE_vars);
	int _la;
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(137);
		match(T__10);
		setState(138);
		match(NL);
		setState(140);
		_errHandler.sync(this);
		_la = _input.LA(1);
		do {
		    {
			{
			    setState(139);
			    variable();
			}
		    }
		    setState(142);
		    _errHandler.sync(this);
		    _la = _input.LA(1);
		} while (_la == T__7);
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class VariableContext extends ParserRuleContext {
	public TerminalNode NL() {
	    return getToken(LostParser.NL, 0);
	}

	public List<TerminalNode> ID() {
	    return getTokens(LostParser.ID);
	}

	public TerminalNode ID(int i) {
	    return getToken(LostParser.ID, i);
	}

	public VariableContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_variable;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterVariable(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitVariable(this);
	}
    }

    public final VariableContext variable() throws RecognitionException {
	VariableContext _localctx = new VariableContext(_ctx, getState());
	enterRule(_localctx, 10, RULE_variable);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(144);
		match(T__7);
		setState(145);
		match(ID);
		setState(146);
		match(ID);
		setState(147);
		match(T__23);
		setState(149);
		switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
		case 1: {
		    setState(148);
		    match(NL);
		}
		    break;
		}
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class GlobalConditionsContext extends ParserRuleContext {
	public List<TerminalNode> NL() {
	    return getTokens(LostParser.NL);
	}

	public ConditionContext condition(int i) {
	    return getRuleContext(ConditionContext.class, i);
	}

	public TerminalNode NL(int i) {
	    return getToken(LostParser.NL, i);
	}

	public List<ConditionContext> condition() {
	    return getRuleContexts(ConditionContext.class);
	}

	public GlobalConditionsContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_globalConditions;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterGlobalConditions(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitGlobalConditions(this);
	}
    }

    public final GlobalConditionsContext globalConditions() throws RecognitionException {
	GlobalConditionsContext _localctx = new GlobalConditionsContext(_ctx, getState());
	enterRule(_localctx, 12, RULE_globalConditions);
	int _la;
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(151);
		match(T__1);
		setState(152);
		match(NL);
		setState(157);
		_errHandler.sync(this);
		_la = _input.LA(1);
		do {
		    {
			{
			    setState(153);
			    match(T__7);
			    setState(154);
			    condition();
			    setState(155);
			    match(NL);
			}
		    }
		    setState(159);
		    _errHandler.sync(this);
		    _la = _input.LA(1);
		} while (_la == T__7);
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class RenamingContext extends ParserRuleContext {
	public TerminalNode NL() {
	    return getToken(LostParser.NL, 0);
	}

	public List<RenamerContext> renamer() {
	    return getRuleContexts(RenamerContext.class);
	}

	public RenamerContext renamer(int i) {
	    return getRuleContext(RenamerContext.class, i);
	}

	public RenamingContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_renaming;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterRenaming(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitRenaming(this);
	}
    }

    public final RenamingContext renaming() throws RecognitionException {
	RenamingContext _localctx = new RenamingContext(_ctx, getState());
	enterRule(_localctx, 14, RULE_renaming);
	int _la;
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(161);
		match(T__22);
		setState(162);
		match(NL);
		setState(164);
		_errHandler.sync(this);
		_la = _input.LA(1);
		do {
		    {
			{
			    setState(163);
			    renamer();
			}
		    }
		    setState(166);
		    _errHandler.sync(this);
		    _la = _input.LA(1);
		} while (_la == T__7);
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class RenamerContext extends ParserRuleContext {
	public TerminalNode NL() {
	    return getToken(LostParser.NL, 0);
	}

	public TerminalNode ID() {
	    return getToken(LostParser.ID, 0);
	}

	public TerminalNode OP() {
	    return getToken(LostParser.OP, 0);
	}

	public ConditionContext condition() {
	    return getRuleContext(ConditionContext.class, 0);
	}

	public RenamerContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_renamer;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterRenamer(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitRenamer(this);
	}
    }

    public final RenamerContext renamer() throws RecognitionException {
	RenamerContext _localctx = new RenamerContext(_ctx, getState());
	enterRule(_localctx, 16, RULE_renamer);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(168);
		match(T__7);
		setState(169);
		match(ID);
		setState(170);
		match(OP);
		setState(171);
		condition();
		setState(173);
		switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
		case 1: {
		    setState(172);
		    match(NL);
		}
		    break;
		}
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class FormulaContext extends ParserRuleContext {
	public TerminalNode NL() {
	    return getToken(LostParser.NL, 0);
	}

	public PreContext pre() {
	    return getRuleContext(PreContext.class, 0);
	}

	public PostContext post() {
	    return getRuleContext(PostContext.class, 0);
	}

	public RefinementContext refinement() {
	    return getRuleContext(RefinementContext.class, 0);
	}

	public FormulaContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_formula;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterFormula(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitFormula(this);
	}
    }

    public final FormulaContext formula() throws RecognitionException {
	FormulaContext _localctx = new FormulaContext(_ctx, getState());
	enterRule(_localctx, 18, RULE_formula);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(175);
		match(T__2);
		setState(176);
		match(T__13);
		setState(177);
		pre();
		setState(178);
		match(T__11);
		setState(179);
		post();
		setState(180);
		match(T__0);
		setState(181);
		match(NL);
		setState(182);
		refinement();
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class PreContext extends ParserRuleContext {
	public ConditionContext condition() {
	    return getRuleContext(ConditionContext.class, 0);
	}

	public PreContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_pre;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterPre(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitPre(this);
	}
    }

    public final PreContext pre() throws RecognitionException {
	PreContext _localctx = new PreContext(_ctx, getState());
	enterRule(_localctx, 20, RULE_pre);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(184);
		match(T__12);
		setState(185);
		condition();
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class PostContext extends ParserRuleContext {
	public ConditionContext condition() {
	    return getRuleContext(ConditionContext.class, 0);
	}

	public PostContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_post;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterPost(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitPost(this);
	}
    }

    public final PostContext post() throws RecognitionException {
	PostContext _localctx = new PostContext(_ctx, getState());
	enterRule(_localctx, 22, RULE_post);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(187);
		match(T__27);
		setState(188);
		condition();
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class IntmContext extends ParserRuleContext {
	public ConditionContext condition() {
	    return getRuleContext(ConditionContext.class, 0);
	}

	public IntmContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_intm;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterIntm(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitIntm(this);
	}
    }

    public final IntmContext intm() throws RecognitionException {
	IntmContext _localctx = new IntmContext(_ctx, getState());
	enterRule(_localctx, 24, RULE_intm);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(190);
		match(T__26);
		setState(191);
		condition();
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class ConditionContext extends ParserRuleContext {
	public QuantorContext quantor() {
	    return getRuleContext(QuantorContext.class, 0);
	}

	public TerminalNode ID() {
	    return getToken(LostParser.ID, 0);
	}

	public ConditionContext condition(int i) {
	    return getRuleContext(ConditionContext.class, i);
	}

	public TerminalNode OP() {
	    return getToken(LostParser.OP, 0);
	}

	public List<ConditionContext> condition() {
	    return getRuleContexts(ConditionContext.class);
	}

	public ConditionContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_condition;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterCondition(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitCondition(this);
	}
    }

    public final ConditionContext condition() throws RecognitionException {
	ConditionContext _localctx = new ConditionContext(_ctx, getState());
	enterRule(_localctx, 26, RULE_condition);
	try {
	    setState(209);
	    switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
	    case 1:
		enterOuterAlt(_localctx, 1); {
		setState(193);
		match(T__13);
		setState(194);
		condition();
		setState(195);
		match(T__0);
	    }
		break;
	    case 2:
		enterOuterAlt(_localctx, 2); {
		setState(197);
		match(T__13);
		setState(198);
		condition();
		setState(199);
		match(T__0);
		setState(200);
		match(OP);
		setState(201);
		condition();
	    }
		break;
	    case 3:
		enterOuterAlt(_localctx, 3); {
		setState(203);
		quantor();
	    }
		break;
	    case 4:
		enterOuterAlt(_localctx, 4); {
		setState(204);
		match(ID);
	    }
		break;
	    case 5:
		enterOuterAlt(_localctx, 5); {
		setState(205);
		match(ID);
		setState(206);
		condition();
	    }
		break;
	    case 6:
		enterOuterAlt(_localctx, 6); {
		setState(207);
		match(OP);
		setState(208);
		condition();
	    }
		break;
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class QuantorContext extends ParserRuleContext {
	public List<TerminalNode> ID() {
	    return getTokens(LostParser.ID);
	}

	public TerminalNode ID(int i) {
	    return getToken(LostParser.ID, i);
	}

	public ConditionContext condition() {
	    return getRuleContext(ConditionContext.class, 0);
	}

	public QuantorContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_quantor;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterQuantor(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitQuantor(this);
	}
    }

    public final QuantorContext quantor() throws RecognitionException {
	QuantorContext _localctx = new QuantorContext(_ctx, getState());
	enterRule(_localctx, 28, RULE_quantor);
	try {
	    enterOuterAlt(_localctx, 1);
	    {
		setState(211);
		match(ID);
		setState(212);
		match(T__13);
		setState(213);
		match(ID);
		setState(214);
		match(ID);
		setState(215);
		match(T__23);
		setState(216);
		condition();
		setState(217);
		match(T__0);
	    }
	} catch (RecognitionException re) {
	    _localctx.exception = re;
	    _errHandler.reportError(this, re);
	    _errHandler.recover(this, re);
	} finally {
	    exitRule();
	}
	return _localctx;
    }

    public static class RefinementContext extends ParserRuleContext {
	public RefinementRuleContext refinementRule() {
	    return getRuleContext(RefinementRuleContext.class, 0);
	}

	public RefinementContext(ParserRuleContext parent, int invokingState) {
	    super(parent, invokingState);
	}

	@Override
	public int getRuleIndex() {
	    return RULE_refinement;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).enterRefinement(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	    if (listener instanceof LOSTListener)
		((LOSTListener) listener).exitRefinement(this);
	}
    }
